# Call_Me_Maybe

./: Makefile  README.md  pyproject.toml
data/input/: functions_definitionM.json
data/output/: M_results.json  function_calling_results.json
src/: __main__.py  data_loader.py  engine.py  parseandrun.py  schemas.py  vocab_loader.py
